Try fixing heading on mobile

--- a/style.css
+++ b/style.css
@@ -368,6 +368,18 @@ a {
         }
      }
 
+     @media (max-width: 2500px) {
+        .welcome h1 {
+         font-size: 3.1em;
+        }
+     }
+
+     @media (max-width: 2500px) {
+        .welcome h3 {
+         font-size: 1.1em;
+        }
+     }
+
      @media (max-width: 800px) {
         .time {
          margin-right: 8px;
